# crnn

./: .gitignore  README.md  pyproject.toml
src/crnn/: cli.py  data.py  decoder.py  infer.py  log.py  net.py  train.py
tests/: conftest.py  test_cli.py  test_data.py
