[project]
name = "crnn"
version = "0.1.0"
description = "PyTorch implementation of a Convolutional Recurrent Neural Network"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
cpu = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
cu128 = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
crnn = "crnn.cli:main"
